Simple projectiles, momentum based, Vector class.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,6 +5,7 @@
     "files": [
         "scripts/app.ts",
         "scripts/game/game.utility.ts",
+        "scripts/game/game.classes.ts",
         "scripts/game/game.core.ts"
     ]
 }
