Weapons and singular "outfile"
The concept of "weapons" have been inserted between player objects and
projectile objects to better handle the projectile meta data.

A bug where dead sprites wouldn't disappear because they didn't trigger
a "draw" fixed by forcing a "draw" every 15 simulation.

Two weapons added to tanks as a "proof-of-concept".

Classes has been dissolved into independent files to ease seperation of
concerns.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,11 +1,15 @@
 {
     "compilerOptions": {
-        "removeComments": false
+        "removeComments": false,
+		"outFile": "main.js"
     },
     "files": [
         "scripts/app.ts",
         "scripts/game/game.utility.ts",
-        "scripts/game/game.classes.ts",
+        "scripts/game/classes/actor.class.ts",
+        "scripts/game/classes/projectiles.class.ts",
+        "scripts/game/classes/weapon.class.ts",
+        "scripts/game/classes/player.class.ts",
         "scripts/game/game.core.ts"
     ]
 }
