Simplified collision model
Simpler collision model.
Fixed issue with offset collision between Rect and Circle.
Fixed issue with non-collision on player 3.
Fixed issue "function draw doesn't exist on Actor".

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,7 @@
 {
     "compilerOptions": {
-        "outFile": "scripts/main.js"
+        "outFile": "scripts/main.js",
+        "watch": true
     },
     "files": [
         "scripts/app.ts",
